...
        listOf(
            ImageVector.vectorResource(R.drawable.message_icon),
            state.email,
            { it: String -> viewModel.onEvent(SignInEvent.EmailEnter(it)) } as (String) -> Unit,
            state.passwordState,
            { it: Boolean -> viewModel.onEvent(SignInEvent.PasswordStateChange(it)) } as (Boolean) -> Unit,
            "Почта",
            false
        ),
        listOf(
            ImageVector.vectorResource(R.drawable.lock_icon),
            state.password,
            { it: String -> viewModel.onEvent(SignInEvent.PasswordEnter(it)) } as (String) -> Unit,
            state.passwordState,
            { it: Boolean -> viewModel.onEvent(SignInEvent.PasswordStateChange(it)) } as (Boolean) -> Unit,
            "Пароль",
            true
        )
    )

    LaunchedEffect(key1 = !state.isComplete) {
        if (state.isComplete) {
...
