...

@Composable
fun CustomAlertDialog(
    description: String,
    title: String = "Ошибка!",
    modifier: Modifier = Modifier,
    tag: String = "dialog",
    dismissClick: () -> Unit,
) {
    AlertDialog(
        onDismissRequest = dismissClick,
        confirmButton = {},
        modifier = modifier
...
