...
@Composable
fun CustomBlueButton(
    text: String,
    enabled: Boolean = true,
    isNextButton: Boolean = false,
    isSignInButton: Boolean = false,
    tag: String = "btn",
    buttonColor: Color? = null,
    modifier: Modifier = Modifier,
    onClick: () -> Unit
) {

    Card(
...
